--- a/catalogue/cmip6/NCAR-CESM2-historical-r1i1p1f1-day-gn/Ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/NCAR-CESM2-historical-r1i1p1f1-day-gn/Ingestion/ingest-from-esgf-v0.yaml
@@ -3,10 +3,10 @@ steps:
     chunks: {}
     engine: esgf
     download: true
-    check_files: false
+    check_files: true
     retries: 3
     filename_or_obj:
-      "project": CMIP6
+      #"project": CMIP6
       "experiment_id": historical
       "source_id": CESM2
       "frequency": ["day", "fx"]
@@ -31,10 +31,10 @@ steps:
       "variant_label": r1i1p1f1
       "grid_label": gn
     esgpull_path: /data/esgpull
-    index_node: esgf-node.ornl.gov
-  chunks: {experiment_id: 1, time: 720, lat: 72, lon: 72 }
+    index_node: esgf-data.ucar.edu
+  chunks: {time: 720, lat: 72, lon: 72}
   to_zarr_kwargs: {
-    store: s3://edh-root/cmip6/CESM2-historical-r1i1p1f1-day-gn-v0.zarr,
+    store: s3://edh-root/cmip6/NCAR-CESM2-historical-r1i1p1f1-day-gn-v0.zarr,
     storage_options: {
       client_kwargs: { endpoint_url: https://s3.gra.io.cloud.ovh.net }
     }
