--- a/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -7,30 +7,34 @@ steps:
     retries: 3
     filename_or_obj:
       "project": CMIP6
-      "experiment_id": historical
-      "source_id": EC-Earth3-CC
+      "experiment_id": ["ssp126", "ssp245", "ssp370", "ssp585"]
+      "source_id": MPI-ESM1-2-HR
       "frequency": ["day", "fx"]
       "variable_id": [
-        "tas",
-        "pr" ,
-        "hurs",
-        "huss",
-        "psl",
-        "uas",
         "vas",
+        "uas",
+        "tas",
+        "tasmin",
+        "tasmax",
+        "sfcWindmax",
+        "sfcWind",
         "rsds",
         "rlut",
-        "rlus",
-        "rlds",
-        "areacella",
+        "psl",
+        "prsn",
+        "pr",
+        "hurs",
+        "huss",
+        "areacella"
       ]
       "variant_label": r1i1p1f1
-      "grid_label": gr
+      "grid_label": gn
+    concat_dims: experiment_id
     esgpull_path: /data/esgpull
     index_node: esgf.ceda.ac.uk
-  chunks: {experiment_id: 1, time: 720, lat: 64, lon: 64 }
+  chunks: {time: 720, lat: 72, lon: 72}
   to_zarr_kwargs: {
-    store: s3://edh-root/cmip6/EC-Earth3-CC-historical-r1i1p1f1-day-gr-v0.zarr,
+    store: s3://edh-root/cmip6/DKRZ-MPI-ESM1-2-HR-ScenarioMIP-r1i1p1f1-day-gn-v0.zarr,
     storage_options: {
       client_kwargs: { endpoint_url: https://s3.gra.io.cloud.ovh.net }
     }
@@ -40,3 +44,5 @@ steps:
     chunks_per_processing_batch: 32,
     retries: 3,
   }
+
+
