Edit ingestion files

--- a/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -11,6 +11,15 @@ steps:
       "source_id": MPI-ESM1-2-HR
       "frequency": ["day", "fx"]
       "variable_id": [
+        "hursmin",
+        "prc",
+        "hfls",
+        "rsus",
+        "hursmax",
+        "rlus",
+        "rlds",
+        "clt",
+        "hfss",
         "vas",
         "uas",
         "tas",
@@ -25,7 +34,8 @@ steps:
         "pr",
         "hurs",
         "huss",
-        "areacella"
+        "areacella",
+        "sftlf"
       ]
       "variant_label": r1i1p1f1
       "grid_label": gn
