More changes to ingestion files

--- a/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -34,8 +34,8 @@ steps:
         "pr",
         "hurs",
         "huss",
-        "areacella",
-        "sftlf"
+        #"areacella",
+        #"sftlf"
       ]
       "variant_label": r1i1p1f1
       "grid_label": gn
