Edit ingestion files

--- a/catalogue/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -7,6 +7,7 @@ steps:
     retries: 3
     filename_or_obj:
       "project": CMIP6
+      "activity_id" : ScenarioMIP
       "experiment_id": ["ssp126", "ssp245", "ssp370", "ssp585"]
       "source_id": CMCC-CM2-SR5
       "frequency": ["day", "fx"]
@@ -46,7 +47,7 @@ steps:
     index_node: esgf.nci.org.au
   chunks: {experiment_id: 1, time: 720, lat: 72, lon: 72 }
   to_zarr_kwargs: {
-    store: s3://edh-root/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn-v0-test.zarr,
+    store: s3://edh-root/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn-v0.zarr,
     storage_options: {
       client_kwargs: { endpoint_url: https://s3.gra.io.cloud.ovh.net }
     }
