--- a/catalogue/cmip6/CMCC-CM2-SR5-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/CMCC-CM2-SR5-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -7,12 +7,14 @@ steps:
     retries: 3
     filename_or_obj:
       "project": CMIP6
-      "experiment_id": historical
+      "activity_id": ScenarioMIP
       "source_id": CMCC-CM2-SR5
+      "experiment_id": historical
+      "variant_label": r1i1p1f1
+      "grid_label": gn
       "frequency": ["day", "fx"]
       "variable_id": [
         "sftlf",
-
         "snc",
         "sfcWindmax",
         "sfcWind",
@@ -39,13 +41,11 @@ steps:
         "rlus",
         "rlds"
       ]
-      "variant_label": r1i1p1f1
-      "grid_label": gn
     esgpull_path: /data/esgpull
     index_node: esgf.nci.org.au
   chunks: {experiment_id: 1, time: 720, lat: 72, lon: 72 }
   to_zarr_kwargs: {
-    store: s3://edh-root/cmip6/CMCC-CM2-SR5-historical-r1i1p1f1-day-gn-v0-test.zarr,
+    store: s3://edh-root/cmip6/CMCC-CM2-SR5-historical-r1i1p1f1-day-gn-v0.zarr,
     storage_options: {
       client_kwargs: { endpoint_url: https://s3.gra.io.cloud.ovh.net }
     }
