--- a/catalogue/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn/__item__.yaml
+++ b/catalogue/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn/__item__.yaml
@@ -19,7 +19,7 @@ assets:
     xarray:storage_options:
       client_kwargs:
         trust_env: true
-search_weight: 90
+search_weight: 91
 properties:
   edh:maturity: draft
   dc:abstract: "This dataset features a selection of future climate projections variables\
@@ -27,16 +27,17 @@ properties:
     \ Project Phase 6 (CMIP6). The dataset covers the future simulation period 2015\u2013\
     2100 and includes experiments for Shared Socioeconomic Pathways SSP1-2.6, SSP2-4.5,\
     \ SSP3-7.0 and SSP5-8.5."
-  dc:title: CMIP6 Climate Projections model CMCC-CM2-SR5
+  dc:title: CMIP6 Climate Projections model CMCC-CM2-SR5 (CMCC)
   dc:access_rights: unrestricted
-  dc:description: CMIP6 project, activity ScenarioMIP, model CMCC-CM2-SR5, experiments
-    SSP1-2.6 SSP2-4.5 SSP3-7.0 SSP5-8.5, variant label r1i1p1f1
+  dc:description: CMIP6 project, activity ScenarioMIP, institution CMCC, model CMCC-CM2-SR5,
+    experiments SSP1-2.6 SSP2-4.5 SSP3-7.0 SSP5-8.5, variant label r1i1p1f1
   datetime: '2100-12-31 12:00:00Z'
   start_datetime: '2015-01-01 12:00:00Z'
   end_datetime: '2100-12-31 12:00:00Z'
   dc:subject:
   - CMIP6
   - ScenarioMIP
+  - CMCC
   - CMCC-CM2-SR5
   - SSP1-2.6
   - SSP2-4.5
