Update catalogue and thumbnails

--- a/catalogue/cmip6/IPSL-CM6A-LR-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/IPSL-CM6A-LR-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -17,7 +17,7 @@ steps:
         "ssp585"
       ]
       "source_id": IPSL-CM6A-LR
-      "frequency": ["day", "fx"]
+      "frequency": ["day"] #, "fx"
       "variable_id": [
         "hursmin",
         "hurs",
