--- a/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/DKRZ-MPI-ESM1-2-HR-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -9,39 +9,39 @@ steps:
       #"project": CMIP
       "experiment_id": historical
       "source_id": MPI-ESM1-2-HR
-      "frequency": ["day", "fx"]
+      "frequency": ["fx"] #"day",
       "variable_id": [
-        "hursmin",
-        "hursmax",
-        "prc",
-        "hfls",
-        "hfss",
-        "rsus",
-        "rlus",
-        "rlds",
-        "rsds",
-        "rlut",
-        "clt",
-        "vas",
-        "uas",
-        "tas",
-        "tasmin",
-        "tasmax",
-        "sfcWindmax",
-        "sfcWind",
-        "psl",
-        "prsn",
-        "pr",
-        "hurs",
-        "huss",
+        #"hursmin",
+        #"hursmax",
+        #"prc",
+        #"hfls",
+        #"hfss",
+        #"rsus",
+        #"rlus",
+        #"rlds",
+        #"rsds",
+        #"rlut",
+        #"clt",
+        #"vas",
+        #"uas",
+        #"tas",
+        #"tasmin",
+        #"tasmax",
+        #"sfcWindmax",
+        #"sfcWind",
+        #"psl",
+        #"prsn",
+        #"pr",
+        ##"hurs",
+        #"huss",
         #"areacella",
-        #"sftlf"
+        "sftlf"
       ]
       "variant_label": r1i1p1f1
       "grid_label": gn
     esgpull_path: /data/esgpull
     index_node: esgf.ceda.ac.uk
-  chunks: {time: 720, lat: 72, lon: 72}
+  chunks: {time: 720, lat: 64, lon: 64}
   to_zarr_kwargs: {
     store: s3://edh-root/cmip6/DKRZ-MPI-ESM1-2-HR-historical-r1i1p1f1-day-gn-v0.zarr,
     storage_options: {
