Edit cmip6 catalogue

--- a/catalogue/cmip6/CMCC-CM2-SR5-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/CMCC-CM2-SR5-historical-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -7,42 +7,47 @@ steps:
     retries: 3
     filename_or_obj:
       "project": CMIP6
-      "activity_id": ScenarioMIP
       "source_id": CMCC-CM2-SR5
       "experiment_id": historical
       "variant_label": r1i1p1f1
       "grid_label": gn
       "frequency": ["day", "fx"]
+      "table_id": [ "day" ]
       "variable_id": [
-        "sftlf",
-        "areacella",
-        "snc",
-        "sfcWindmax",
-        "sfcWind",
-        "rsus",
-        "prsn",
-        "prc",
-        "mrsos",
-        "mrso",
-        "mrro",
-        "hfss",
-        "hfls",
-        "clt",
-        "pr",
-        "tas",
-        "hurs",
-        "huss",
-        "psl",
-        "uas",
-        "vas",
-        "rsds",
-        "rlut",
-        "rlus",
-        "rlds"
+        #"sftlf",
+        #"areacella",
+
+        #"snc",
+        #"sfcWindmax",
+        #"sfcWind",
+        #"rsus",
+        #"prsn",
+        #"prc",
+        #"hfss",
+        #"hfls",
+        #"clt",
+        #"mrsos",
+        #"mrso",
+        #"mrro",
+
+        #"pr",
+        #"tas",
+        #"hurs",
+        #"huss",
+        #"psl",
+        #"uas",
+        #"vas",
+        #"rsds",
+        #"rlut",
+        #"rlus",
+        #"rlds"
       ]
     esgpull_path: /data/esgpull
-    index_node: esgf.nci.org.au
-  chunks: {experiment_id: 1, time: 720, lat: 72, lon: 72 }
+    index_node: esgf.ceda.ac.uk
+    #index_node: esgf-data.dkrz.de
+    #index_node: esgf.nci.org.au
+    #index_node: esgf-node.ornl.gov/esgf-1-5-bridge
+  chunks: {time: 720, lat: 32, lon: 72 }
   to_zarr_kwargs: {
     store: s3://edh-root/cmip6/CMCC-CM2-SR5-historical-r1i1p1f1-day-gn-v0.zarr,
     storage_options: {
