--- a/catalogue/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn/ingestion/ingest-from-esgf-v0.yaml
@@ -11,40 +11,43 @@ steps:
       "experiment_id": ["ssp126", "ssp245", "ssp370", "ssp585"]
       "source_id": CMCC-CM2-SR5
       "frequency": ["day", "fx"]
+      "table_id": ["day"]
+      "variant_label": r1i1p1f1
+      "grid_label": gn
       "variable_id": [
-        #"sftlf",
+        "sftlf",
         #"snc",
         #"sfcWindmax",
         #"sfcWind",
         #"rsus",
         #"prsn",
         #"prc",
-        #"mrsos",
-        #"mrso",
-        #"mrro",
         #"hfss",
         #"hfls",
         #"clt",
-
-        "areacella",
-        "pr",
-        "tas",
-        "hurs",
-        "huss",
-        "psl",
-        "uas",
-        "vas",
-        "rsds",
-        "rlut",
-        "rlus",
-        "rlds"
+        #"mrsos",
+        #"mrso",
+        #"mrro",
+        #"areacella",
+        #"pr",
+        #"tas",
+        #"hurs",
+        #"huss",
+        #"psl",
+        #"uas",
+        #"vas",
+        #"rsds",
+        #"rlut",
+        #"rlus",
+        #"rlds"
       ]
-      "variant_label": r1i1p1f1
-      "grid_label": gn
     concat_dims: experiment_id
     esgpull_path: /data/esgpull
-    index_node: esgf.nci.org.au
-  chunks: {experiment_id: 1, time: 720, lat: 72, lon: 72 }
+    index_node: esgf.ceda.ac.uk
+    #index_node: esgf-data.dkrz.de
+    #index_node: esgf.nci.org.au
+    #index_node: esgf-node.ornl.gov/esgf-1-5-bridge
+  chunks: {experiment_id: 1, time: 720, lat: 32, lon: 72 }
   to_zarr_kwargs: {
     store: s3://edh-root/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gn-v0.zarr,
     storage_options: {
@@ -53,6 +56,6 @@ steps:
   }
   robust_to_zarr_kwargs: {
     processing_dim: time,
-    chunks_per_processing_batch: 12,
+    chunks_per_processing_batch: 32,
     retries: 3
   }
